# BoltPage

./: .env.example  .gitignore  AGENTS.md  AUDIT_REPORT.md  BRIEFING.md  CHANGES.md  COMPLETE_REFACTORING_REPORT.md  LICENSE  README.md  REFACTORING_SUMMARY.md  TASKS.md  ai_software.md  ai_truthfulness.md  comingnext.md  redesign.html  release-build.sh  test-themes.md  test-tier1.md  test.md  update-cask.sh
.github/workflows/: ci.yml  pr-checks.yml  release.yml  windows-build.yml
astrojs_website/: README.md  astro.config.mjs  package-lock.json  package.json
astrojs_website/.astro/: settings.json
boltpage/: .env.example  BRIEFING.md  BRIEFING.md.migrated  CHANGES.md  CHANGES.md.migrated  Cargo.toml  PACKAGING.md  STRICT_BUILD_INSTRUCTIONS.md  build-release.sh  debug_themes.rs  package-lock.json  package.json  setup_readme.md  test-file.md  test-file1.md  update-icon.sh
boltpage/.github/: SETUP_SECRETS.md
boltpage/.github/workflows/: build-macos.yml  build-windows.yml  release.yml
boltpage/Homebrew/: PUBLISHING.md
boltpage/Homebrew/Casks/: boltpage.rb
boltpage/markrust-core/: Cargo.toml
boltpage/markrust-core/src/: lib.rs
boltpage/scripts/: sync-version.sh  vendor-codemirror.sh
boltpage/src/: constants.js  editor.css  editor.html  editor.js  index.html  main.js  shared.js  styles.css
boltpage/src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
boltpage/src-tauri/capabilities/: default.json
boltpage/src-tauri/icons/: icon.icns
boltpage/src-tauri/src/: constants.rs  io.rs  lib.rs  main.rs  menu.rs  prefs.rs  watchers.rs  window.rs  workspace.rs
docs/: anonymization.md  markdown_design.md  plan_2026-06_features.md  redesign_briefing.md  refined_refesign.md  release_CI.md  todo_future.md
markrust/: Cargo.toml  PACKAGING.md  STRICT_BUILD_INSTRUCTIONS.md  build-release.sh  setup_readme.md  test-file2.md
(+19 files in other folders)
