[package]
name = "markrust-core"
version = "0.1.0"
edition = "2021"

[dependencies]
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }
ammonia = "4.0"
serde_json = "1"
serde_yaml = "0.9"