[package]
name = "boltpage"
version = "1.6.0"
description = "A Tauri App"
authors = ["BoltPage Contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "boltpage"
path = "src/main.rs"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "boltpage"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
markrust-core = { path = "../markrust-core" }
uuid = { version = "1", features = ["v4"] }
notify = "6.1"
tokio = { version = "1", features = ["sync", "time"] }
base64 = "0.22"
url = "2.5"
lru = "0.12"
